--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,9 @@
 :root {
-  --primary: #232F3E;
-  --secondary: #F3A847;
-  --tertiary: #B12704;
+  --primary: #353440;
+  --secondary: #56738C;
+  --tertiary: #00010D;
   --light: #fafafa;
-  --dark: #272f32;
+  --dark: #AAADBF;
   --error: rgb(228, 46, 1);
   --spacing-one: calc(1rem * 0.5);
   --spacing-two: calc(1rem);
@@ -16,6 +16,11 @@
 html,
 body {
   min-height: 100%;
+  background-color: var(--tertiary);
+  background-image: url("stars.jpg");
+  background-size: 100vw;
+  /* background-size: cover; */
+  
 }
 
 body {
@@ -84,7 +89,7 @@ header {
 }
 
 header a {
-  color: var(--light);
+  color: var(--dark);
 }
 
 button {
@@ -115,22 +120,40 @@ img {
 span[role="img"] {
   cursor: default;
 }
-
+.cart{
+  color: var(--tertiary);
+}
 form {
   width: 40%;
+  padding-left: 1rem;
+  color: var(--light);
+  border-radius: 4px;
+  box-shadow:0px 0px 7px var(--tertiary);
 }
 
 input {
   font-size: 1rem;
   padding: 0.25rem;
-  border: 1px solid var(--dark);
+  border: 1px solid var(--secondary);
+  color: var(--light);
   outline: none;
-  border-radius: 3px;
+  background-color: var(--secondary);
   transition: box-shadow 0.2s;
 }
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: var(--dark);
+  opacity: 1; /* Firefox */
+}
 
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: var(--dark);
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: var(--dark);
+}
 input:focus {
-  border: 1px solid var(--secondary);
+  border: 1px solid var(--primary);
   box-shadow: 0 0 .25rem rgba(0, 0, 0, .5);
 }
 
@@ -139,6 +162,9 @@ input:focus {
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
+  background-color: var(--tertiary);
+  border-radius: 4px;
+  box-shadow:0px 0px 7px var(--tertiary); 
 }
 
 .flex-row {
@@ -206,5 +232,10 @@ input:focus {
 @media screen and (max-width: 768px) {
   .card {
     width: 100%;
+  }
+}
+@media screen and (max-width: 1300px) {
+  .body {
+    background-size: 100vw;
   }
 }
